test/files/pos/t1029/Test_2.scala
object Test {
  val t = Test1
}
