test/files/neg/macro-keyword/Macros_Var_2.scala
object Test2 {
  var macro = ???
}